<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pager_background"
        android:orientation="vertical">


        <gr.modissense.ui.view.NonSwipeableViewPager
            android:id="@+id/vp_pages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


        </gr.modissense.ui.view.NonSwipeableViewPager>

    </LinearLayout>

    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_background"
        android:gravity="center_horizontal">

        <gr.modissense.ui.view.CapitalizedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_item_home"
            android:text="@string/title_pois"
            android:drawableLeft="@drawable/menu_search"
            style="@style/NavMenuButton"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <gr.modissense.ui.view.CapitalizedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blog"
            android:text="@string/blog"
            android:drawableLeft="@drawable/menu_blogs"
            style="@style/NavMenuButton"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color"
            />
        <gr.modissense.ui.view.CapitalizedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account"
            android:text="@string/account"
            android:drawableLeft="@drawable/menu_profile"
            style="@style/NavMenuButton"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color"
            />
        <gr.modissense.ui.view.CapitalizedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gpstraces"
            android:text="@string/gpstraces"
            android:drawableLeft="@drawable/menu_settings"
            style="@style/NavMenuButton"
            android:paddingLeft="10dp"
            android:gravity="left|center_vertical"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color"
            />



        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/NavMenuButton"
            android:gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="9sp" />


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
